CHANGELOG
--------------------------

ClanSphere 2009.0 >> 2009-05-xx
___________________________________________________________

-> Added support for Microsoft SQL Server 2005 and 2008 using the sqlsrv extension (hajo)

-- Fixed a huge number of bugs that were reported at "Trac" --


ClanSphere 2009.0 RC3 >> 2009-05-17
___________________________________________________________

-> Added abcode editor bridge to allow the usage of other wysiwyg software (hajo)
-> Added compatible-view for old browsers to cs_manage function (hajo)
-> Added possibilities to close or pinup threads during writing, close also for create comments (fay-pain)
-> Fixed many getimagesize php notice issues (hajo)
-> Installation detects and tests database extensions automated now (hajo)
-> Moved charset info from languages to 'setup.php' and set it to UTF-8 by default (hajo)
-> Removed needless php closing tag from nearly every end of file (hajo)
-> Reworked clansphere/software and database/roots page to be more helpful (hajo)
-> The AJAX fallback solution now works, enabling AJAX for everybody is now possible (duriel)
-> Worked on the count archive so there is a daily archive to increase the performance of big websites (duriel)

-- Fixed a huge number of bugs that were reported at "Trac" --


ClanSphere 2009.0 RC2 >> 2009-04-05
___________________________________________________________

-> Added caching functions and implemented caching in access module and metatags (duriel, hajo)
-> Improved handling of filetypeicons (gahero)
-> Hiding squads in fightus will also hide them in wars now (gahero)
-> Fixed alot of path settings in themes to be compatible with mod_rewrite (gahero, hajo)
-> Fixed many bugs in the logs mod and added php errors to error log files (hajo)
-> Reworked sec_news to only scan for news every 2,5 hours and be displayed everywhere (hajo)
-> Hiding tables in squads view when there are no awards, ranks or wars (fay-pain)
